--- a/eu-atollgroup-mifid-web/src/main/webapp/css/style.css
+++ b/eu-atollgroup-mifid-web/src/main/webapp/css/style.css
@@ -1,7 +1,18 @@
 .no-left-padding {
-    padding-left:0;
+    padding-left: 0;
 }
 
 .no-right-padding {
-    padding-right:0;
+    padding-right: 0;
+}
+
+.answerStyle {
+    padding-top: 5px;
+    padding-bottom: 5px;
+}
+
+.mybottom {
+    position: absolute;
+    bottom: 0px;
+    padding: 10px;
 }
