--- a/eu-atollgroup-mifid-web/src/main/webapp/views/questionnaires.html
+++ b/eu-atollgroup-mifid-web/src/main/webapp/views/questionnaires.html
@@ -4,7 +4,7 @@
         <div class="col-md-6">
             <div class="panel panel-default">
                 <div class="panel-heading">
-                    <h3 class="panel-title">Kérdőívek</h3>
+                    <h3 class="panel-title">Szerkesztő</h3>
                 </div>
                 <div class="panel-body">
                     <!--KÉRDŐÍV VÁLASZTÓ-->
