--- a/eu-atollgroup-mifid-web/src/main/webapp/views/products.html
+++ b/eu-atollgroup-mifid-web/src/main/webapp/views/products.html
@@ -52,7 +52,7 @@
                                 </div>
                                 <div class="form-group">
                                     <label>
-                                        Kérdőív szükséges
+                                        Kérdőív szükséges-e:
                                     </label>
                                     <input type="checkbox" ng-model="product.isQuestionnaireNeeded">
                                 </div>
