--- a/eu-atollgroup-mifid-web/src/main/webapp/views/questionnaires.html
+++ b/eu-atollgroup-mifid-web/src/main/webapp/views/questionnaires.html
@@ -14,7 +14,7 @@
                                 <div class="col-md-8">
                                     <label>Meglévő kérdőív szerkesztése</label>
                                     <select class="form-control" ng-model="quest.selected"
-                                            ng-options="o as o for o in quest.options" ng-change="selectUpdate()"
+                                            ng-options="o as o for o in quest.options" ng-change="selectQuestionnaireUpdate()"
                                             ng-disabled="!isCollapsed"></select>
                                 </div>
                                 <div class="col-md-1 positionOR">
@@ -52,11 +52,9 @@
                                            ng-model="questionnaire.description">
                                 </div>
                                 <div class="form-group">
-                                    <div ng-controller="PopoverDemoCtrl">
                                         <label>Vonatkozó termék</label>
-                                        <select class="form-control" ng-model="placement.selected"
-                                                ng-options="o as o for o in placement.options"></select>
-                                    </div>
+                                        <select class="form-control" ng-model="prod.selected"
+                                                ng-options="o as o for o in prod.options" ng-change="selectProductUpdate()"></select>
                                 </div>
 
                                 <div class="form-group">
