-Fixed Termék handling

--- a/eu-atollgroup-mifid-web/src/main/webapp/views/products.html
+++ b/eu-atollgroup-mifid-web/src/main/webapp/views/products.html
@@ -57,7 +57,7 @@
                                            ng-disabled="productForm.$invalid" value="Mentés">
                                     <button type="button" class="btn btn-default" ng-click="cancelProduct()">Mégse
                                     </button>
-                                    <button type="button" class="btn btn-danger" ng-click="deleteProduct()">Kérdőív
+                                    <button type="button" class="btn btn-danger" ng-click="deleteProduct()">Termék
                                         törlése
                                     </button>
                                 </div>
